--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,9 +1,13 @@
+@import "./variables";
+
 .header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 25px;
-    margin-top: 15px;
+    padding: 5px 25px;
+    font-family: 'Poppins', sans-serif;
+    font-size: $headLine6;
+    letter-spacing: 1.5px;
     &__button{
         background-color: white;
         border: none;
