--- a/src/components/variables.scss
+++ b/src/components/variables.scss
@@ -1,4 +1,14 @@
 $primaryColor:#FF1168;
 $secondaryColor:#341931;
 $additionalColor:#111625;
-$gradientColor: linear-gradient(90deg,#EE0979 0%, #FF6A00 45%)
+$gradientColor: linear-gradient(90deg,#EE0979 0%, #FF6A00 45%);
+
+$fontFamily: 'Poppins', sans-serif;
+
+$headLine1:48px;
+$headLine2:36px;
+$headLine3:32px;
+$headLine4:24px;
+$headLine5:20px;
+$headLine6:15px;
+$headLine7:15px;
