all four navigation pages are styled

--- a/src/components/MainHeader.scss
+++ b/src/components/MainHeader.scss
@@ -9,6 +9,6 @@
     margin: 10px;
     background: $gradientColor;
     background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+    // -webkit-text-fill-color: transparent;
+    }
 }
