--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 25px;
+    padding: 5px 22.7px;
     font-family: 'Poppins', sans-serif;
     font-size: $headLine6;
     letter-spacing: 1.5px;
@@ -12,7 +12,12 @@
         font-weight: 200;
     }
     &__button{
-        background-color: white;
+        background-color: transparent;
+        font-family: $fontFamily;
+        font-size: $headLine4;
+        font-weight: 400;
+        margin: 0;
+        padding: 0;
         border: none;
     }
 }
