--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -5,6 +5,8 @@
     justify-content: space-evenly;
     align-items: center;
     height: 60px;
+    -webkit-box-shadow: 0px -4px 16px -3px rgba(0,0,0,0.38); 
+    box-shadow: 0px -4px 16px -3px rgba(0,0,0,0.38);
     background-color: white;
     z-index: 1;
     position: fixed;
