--- a/src/components/SongSetUp.scss
+++ b/src/components/SongSetUp.scss
@@ -8,17 +8,34 @@
             display: grid;
             grid-template-columns: 25% 45% 35%;
             align-items: center;
-            text-align: end;
+            // text-align: end;
             padding: 0 40px 0 25px;
             font-family: $fontFamily;
+            &__imgContainer{
+                // border: 1px red solid;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 50px;
+                height: 50px;
+                // border-radius: 50%;
+                // background-color: red;
+                // width: 25px;
+                // height: 25px;
+
+            }
             &__img{
                 object-fit: cover;
                 width: 100%;
                 height: 100%;
+                // border-radius: 10px;
+                // border-radius: 50%;
+                // height: 13px;
+                // width: 13px;
             }
             &__content{
-                text-align: center;
-                padding-left: 15px;
+                text-align: left;
+                // padding-left: 15px;
                 .title{
                     font-weight: 700;
                     font-size: $headLine6;
