--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,27 +1,27 @@
 @import "./variables";
 
-.header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 22.7px;
-    font-family: 'Poppins', sans-serif;
-    font-size: $headLine6;
-    letter-spacing: 1.5px;
-    
-    &__title{
-        font-weight: 200;
-    }
-    &__button{
-        background-color: transparent;
-        font-family: $fontFamily;
-        font-size: $headLine4;
-        font-weight: 400;
-        margin: 0;
-        padding: 0;
-        border: none;
-    }
-    &__search{
-        padding-top: 5px;
-    }
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 5px 22.7px;
+	font-family: "Poppins", sans-serif;
+	font-size: $headLine6;
+	letter-spacing: 1.5px;
+
+	&__title {
+		font-weight: 200;
+	}
+	&__button {
+		background-color: transparent;
+		font-family: $fontFamily;
+		font-size: $headLine4;
+		font-weight: 400;
+		margin: 0;
+		padding: 0;
+		border: none;
+	}
+	&__search {
+		padding-top: 5px;
+	}
 }
