--- a/src/components/MainHeader.scss
+++ b/src/components/MainHeader.scss
@@ -1,14 +1,14 @@
 @import "./variables";
-.mainHeader{
-    padding: 0 20px;
-    font-family: 'Poppins', sans-serif;
-    font-size: $headLine3;
-    font-weight: bolder;
-    &__title{
-        display: inline-block;
-        margin: 10px 0px;
-        background: $gradientColor;
-        background-clip: text;
-        // -webkit-text-fill-color: transparent;
-    }
+.mainHeader {
+	padding: 0 20px;
+	font-family: "Poppins", sans-serif;
+	font-size: $headLine3;
+	font-weight: bolder;
+	&__title {
+		display: inline-block;
+		margin: 10px 0px;
+		background: $gradientColor;
+		background-clip: text;
+		// -webkit-text-fill-color: transparent;
+	}
 }
