--- a/src/components/Navigation.scss
+++ b/src/components/Navigation.scss
@@ -1,41 +1,40 @@
 @import "variables";
 
-.navigation{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 60px;
-    -webkit-box-shadow: 0px -4px 16px -3px rgba(0,0,0,0.38); 
-    box-shadow: 0px -4px 16px -3px rgba(0,0,0,0.38);
-    background-color: white;
-    z-index: 1;
-    position: fixed;
-    width: 100%;
-    left: 0;
-    bottom: 0;
-    padding: 0;
-    margin: 0;
-    &__item{
-        button{
-            background-color: white;
-            border: none;
-        }
-        list-style: none;
-        a{
-            img{
-                height: 20px;
-                width: 20px;
-            }
-            div{
-                height: 35px;
-                width: 35px;
-                border-radius: 50%;
-                background: $gradientColor;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
-        }
-    }    
+.navigation {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	height: 60px;
+	-webkit-box-shadow: 0px -4px 16px -3px rgba(0, 0, 0, 0.38);
+	box-shadow: 0px -4px 16px -3px rgba(0, 0, 0, 0.38);
+	background-color: white;
+	z-index: 1;
+	position: fixed;
+	width: 100%;
+	left: 0;
+	bottom: 0;
+	padding: 0;
+	margin: 0;
+	&__item {
+		button {
+			background-color: white;
+			border: none;
+		}
+		list-style: none;
+		a {
+			img {
+				height: 20px;
+				width: 20px;
+			}
+			div {
+				height: 35px;
+				width: 35px;
+				border-radius: 50%;
+				background: $gradientColor;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+			}
+		}
+	}
 }
-
