--- a/src/components/SongSetUp.scss
+++ b/src/components/SongSetUp.scss
@@ -1,61 +1,58 @@
 @import "variables.scss";
 
-.songMain{
-    display: grid;
-    grid-gap:30px;
-    grid-auto-rows: 70px;
-    .songWrapper{
-            display: grid;
-            grid-template-columns: 25% 45% 35%;
-            align-items: center;
-            // text-align: end;
-            padding: 0 40px 0 25px;
-            font-family: $fontFamily;
-            &__imgContainer{
-                // border: 1px red solid;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 50px;
-                height: 50px;
-                // border-radius: 50%;
-                // background-color: red;
-                // width: 25px;
-                // height: 25px;
-
-            }
-            &__img{
-                object-fit: cover;
-                width: 100%;
-                height: 100%;
-                // border-radius: 10px;
-                // border-radius: 50%;
-                // height: 13px;
-                // width: 13px;
-            }
-            &__content{
-                text-align: left;
-                // padding-left: 15px;
-                .title{
-                    font-weight: 700;
-                    font-size: $headLine6;
-                    margin: 0;
-                }
-                .author{
-                    font-weight: 200;
-                    font-size: $headLine7;
-                    opacity: .8;
-                    margin: 0;
-
-                }
-
-            }
-            &__amount{
-                text-align: end;
-                font-weight: 200;
-                font-size: $headLine7;
-                opacity: .8;
-                margin: 0;
-            }
-        }
+.songMain {
+	display: grid;
+	grid-gap: 30px;
+	grid-auto-rows: 70px;
+	.songWrapper {
+		display: grid;
+		grid-template-columns: 25% 45% 35%;
+		align-items: center;
+		// text-align: end;
+		padding: 0 40px 0 25px;
+		font-family: $fontFamily;
+		&__imgContainer {
+			// border: 1px red solid;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			width: 50px;
+			height: 50px;
+			// border-radius: 50%;
+			// background-color: red;
+			// width: 25px;
+			// height: 25px;
+		}
+		&__img {
+			object-fit: cover;
+			width: 100%;
+			height: 100%;
+			// border-radius: 10px;
+			// border-radius: 50%;
+			// height: 13px;
+			// width: 13px;
+		}
+		&__content {
+			text-align: left;
+			// padding-left: 15px;
+			.title {
+				font-weight: 700;
+				font-size: $headLine6;
+				margin: 0;
+			}
+			.author {
+				font-weight: 200;
+				font-size: $headLine7;
+				opacity: 0.8;
+				margin: 0;
+			}
+		}
+		&__amount {
+			text-align: end;
+			font-weight: 200;
+			font-size: $headLine7;
+			opacity: 0.8;
+			margin: 0;
+		}
+	}
 }
